--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Aspiring developer?</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Barbados</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Travel, Tennis, Writing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Manhattan, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Tech lover</p>
     </section>
 
     <footer id="footer">
